Lab11 16/App7/app7-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app7-deploy
spec:
  selector:
    matchLabels:
      app: app7
      version: v1
  template:
    metadata:
      labels:
        app: app7
        version: v1
    spec:
      containers:
      - name: app7
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app7-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app7-volume
        configMap:
          name: app7-configmap
