Lab11 16/App7/app7-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app7-svc
spec:
  selector:
    app: app7
  ports:
  - name: http-default
    port: 80
