Lab11 16/App7/app7-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app7-destinationrules
spec:
  host: app7-svc.default.svc.cluster.local
  subsets:
  - name: app7-v1-subset
    labels:
      app: app7
      version: v1
